[todos]: CRUD: finish crud todos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@styles/*": ["styles/*"]
+      "@styles/*": ["styles/*"],
+      "@common-components": ["common/components/index.ts"],
+      "@todos/*": ["modules/todos/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
